--- a/cadastrodeprodutodoacao.html
+++ b/cadastrodeprodutodoacao.html
@@ -12,24 +12,20 @@
             --roxo: #A200CB;
             --cinza: grey;
         }
-
         * {
             margin: 0;
             padding: 0;
         }
-
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
-
         main {
             background-image: url(img/bannerpho.png);
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
         }
-
-        .card {
+        .card_cadastroproduto {
             display: flex;
             flex-direction: column;
             width: 600px;
@@ -44,23 +40,24 @@
             margin-bottom: 40px;
         }
 
-        .card h2 {
+        .card_cadastroproduto h2 {
             font-size: 40px;
             padding: 20px;
             color: var(--roxo);
         }
+
         form label {
             font-size: 20px;
             color: var(--roxo);
         }
 
-        .radios {
+        .radios_cadastroproduto {
             display: flex;
             justify-content: space-around;
             width: 500px;
         }
 
-        .radio {
+        .radio_cadastroproduto {
             display: flex;
             align-items: center;
             justify-content: flex-start;
@@ -68,10 +65,11 @@
             width: 100px;
         }
 
-        .radio2 {
+        .radio2_cadastroproduto {
             display: flex;
             align-items: center;
             justify-content: flex-end;
+            padding: 30px;
             width: 100px;
         }
 
@@ -84,19 +82,19 @@
             width: 230px;
         }
 
-        .campo {
+        .campo_cadastroproduto {
             /* width: 500px; */
             display: flex;
             justify-content: space-between;
             padding: 10px;
         }
 
-        .campo input {
+        .campo_cadastroproduto input {
             border-radius: 10px;
             border: solid 1px var(--cinza);
         }
 
-        .btn {
+        .btn_cadastroproduto {
             display: flex;
             justify-content: center;
             margin: auto;
@@ -115,120 +113,91 @@
             margin: 30px;
         }
 
-        .fotos {
+        .fotos_cadastroproduto {
             display: flex;
             flex-direction: column;
             margin: auto;
         }
 
-        .fotos label {
+        .fotos_cadastroproduto label {
             margin: auto;
-            padding: 15px 0px;
         }
 
-        .fotos input {
+        .fotos_cadastroproduto input {
             border: dotted 1px grey;
             border-radius: 4px;
             height: 60px;
             width: 400px;
             margin: auto;
-            margin-bottom: 30px;
+            margin-bottom: 5px;
         }
 
-        .juntos {}
-
-        .fotos img {
+        .fotos_cadastroproduto img {
             width: 80px;
         }
 
-        /*Footer*/
-        header {
-            height: 130px;
-            display: flex;
-            justify-content: space-between;
-            align-content: center;
-            background-color: #A200CB;
+        @media (max-width: 1024px) {
+            body {
+                width: 500px;
+            }
+
+            main {
+                width: 1000px;
+            }
+
+
+            .card_cadastroproduto h2 {
+                font-size: 20px;
+            }
+
+            form {
+                width: 300px;
+                height: 1200px;
+            }
+
+            .campo_cadastroproduto {
+                display: flex;
+                flex-direction: column;
+            }
+
+            .radios_cadastroproduto {
+                display: flex;
+                flex-direction: column;
+                width: 100px;
+                align-items: flex-start;
+            }
+
+            .fotos_cadastroproduto input {
+                width: 100px;
+                display: flex;
+                justify-content: flex-start;
+            }
+
+            .btn_cadastroproduto {
+                width: 300px;
+                margin: auto;
+            }
         }
 
-        .container img {
-            height: 95px;
-            width: 204px;
-        }
+        @media (max-width: 767px) {
+            main {
+                width: 730px;
+                margin: auto;
+            }
 
-        .container {
-            width: 1200px;
-            margin: auto;
-        }
+            .fotos_cadastroproduto input {
+                width: 250px;
+            }
 
-        .container input {
-            width: 605px;
-            height: 35px;
-            margin-left: -120px;
-        }
-
-        .menu-centro {
-            display: flex;
-            justify-content: center;
-        }
-
-        .ca {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-
-        .ca a {
-            text-decoration: none;
-            color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .botao-login {
-            display: flex;
-            justify-content: flex-end;
-        }
-
-        #entrar {
-            width: 30px;
-            height: 35px;
-            margin: 10px;
-        }
-
-        .menu {
-            list-style: none;
-            display: flex;
-            justify-content: space-between;
-            width: 600px;
-            align-items: center;
-            font-size: 12px;
-        }
-
-        .menu a {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            text-decoration: none;
-            text-transform: uppercase;
-            color: white;
-        }
-
-        footer {
-            background-image: linear-gradient(to right, rgb(162, 0, 203), rgb(20, 204, 138));
-            color: white;
-            font-size: 18px;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            text-align: center;
-            height: 100px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            .card_cadastroproduto {
+                height: 1300px;
+            }
         }
     </style>
 </head>
 
 <body>
-    <header>
+    <!-- <header>
         <div class="container">
             <div class="ca">
                 <img src="img/Agrupar 110.png" alt="logo smart sale" id="avatar">
@@ -256,75 +225,76 @@
                 </div>
             </nav>
         </div>
-    </header>
+    </header> -->
     <main>
-        <div class="card">
+        <div class="card_cadastroproduto">
             <h2>Cadastro de Produto</h2>
-            <form method="POST" id="form_cadastro">
-                <div class="campo">
+            <form method="POST" id="form_cadastroproduto">
+                <div class="campo_cadastroproduto">
                     <label>Nome</label>
                     <input type="text" aria-label="Digite seu nome" name="nome" required>
                 </div>
-                <div class="campo">
+                <div class="campo_cadastroproduto">
                     <label>Tamanho</label>
                     <input type="text" aria-label="Digite o tamanho" name="tamanho" required>
                 </div>
-                <div class="campo">
+                <div class="campo_cadastroproduto">
                     <label>Peso</label>
                     <input type="text" aria-label="Digite o peso" name="peso" required>
                 </div>
-                <div class="campo">
+                <div class="campo_cadastroproduto">
                     <label>Quantidade</label>
                     <input type="text" aria-label="Digite a quantidade" name="quantidade" required>
                 </div>
-                <div class="campo">
+                <div class="campo_cadastroproduto">
                     <label>Cor</label>
                     <input type="text" aria-label="Digite a cor" name="cor" required>
                 </div>
-                <div class="campo">
+                <div class="campo_cadastroproduto">
                     <label>Volume</label>
                     <input type="text" aria-label="Digite o volume" name="volume" required>
                 </div>
-                <div class="campo">
+                <div class="campo_cadastroproduto">
                     <label>Data de Validade</label>
                     <input type="text" aria-label="Indique a data de validade" name="dtvalidade" required>
                 </div>
-                <div class="campo">
+                <div class="campo_cadastroproduto">
                     <label>Data limite de Venda</label>
                     <input type="text" aria-label="Limite para venda" name="dtlimvd" required>
                 </div>
-                <div class="campo">
+                <div class="campo_cadastroproduto">
                     <label>Data limite para doação</label>
                     <input type="text" aria-label="Limite para doação" name="dtlimdo" required>
                 </div>
                 <hr>
-                <div class="radios">
-                    <div class="radio">
+                <div class="radios_cadastroproduto">
+                    <div class="radio_cadastroproduto">
                         <input type="radio" aria-label="Doação" name="tipo" required>
                         <label>Doação</label>
                     </div>
-                    <div class="radio2">
+                    <div class="radio2_cadastroproduto">
                         <input type="radio" aria-label="Venda" name="tipo" required>
                         <label>Venda</label>
                     </div>
                 </div>
                 <hr> <!-- Utilizada para inserir uma linha-->
-                <label>Fotos</label>
-                <div class="fotos">
+                <div class="fotos_cadastroproduto">
+                    <label>Fotos</label>
+
                     <!-- <img src="img/iconcam.png" alt="Icone camera"> -->
                     <input type="file" accept="image/png, image/jpeg"
                         placeholder="Adicionar fotos Você também pode arrasta-lás"
                         aria-label="Adicionar fotos Você também pode arrasta-lás" name="foto">
                 </div>
-                <div class="btn">
+                <div class="btn_cadastroproduto">
                     <button type=submit>Cadastrar</button>
                 </div>
             </form>
         </div>
     </main>
-    <footer>
+    <!-- <footer>
         <p>SMART SALE ©2019</p>
-    </footer>
+    </footer> -->
 </body>
 
 </html>
