--- a/home.html
+++ b/home.html
@@ -312,7 +312,7 @@
             box-shadow: 2px 2px 10px 1px rgba(0, 0, 0, 0.1);
             border-radius: 5px;
             background-color: white;
-            
+
 
         }
 
@@ -359,7 +359,18 @@
             flex-direction: row;
         }
 
-        .pdts2 {}
+
+        /* ==========================================================media queries======================================================= */
+
+        /* Smart device - mobile */
+
+        @media(max-width: 767px) {
+
+            /* header */
+        header {
+        
+        }            
+        }
     </style>
     <meta charset=" UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
